// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppRootComponent when isLoggedIn true matches snapshot 1`] = `
<Component>
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(LoginContainer)",
        "type": [Function],
      }
    }
    path="/login"
  />
  <Route
    component={[Function]}
    path="/"
  />
  <Route
    component={[Function]}
    path="/stubs"
  />
  <StubsRoot />
</Component>
`;

exports[`AppRootComponent with default props matches snapshot 1`] = `
<Component>
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(LoginContainer)",
        "type": [Function],
      }
    }
    path="/login"
  />
  <Route
    component={[Function]}
    path="/"
  />
  <Route
    component={[Function]}
    path="/stubs"
  />
  <Redirect
    to="/login"
  />
  <StubsRoot />
</Component>
`;
